# tree-sitter

./: .gitignore  MODULE.bazel
cli/: BUILD
cli/config/: BUILD
cli/generate/: BUILD
cli/loader/: BUILD
highlight/: BUILD
lib/: BUILD
lib/binding_rust/: lib.rs
lib/language/: BUILD
tags/: BUILD
